B31: cấu trúc dự án

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,19 +59,20 @@
     <Compile Include="Assets\Scrpits\Log.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\HealthSignal.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\PlayerHit.cs" />
-    <Compile Include="Assets\Scrpits\Sign.cs" />
-    <Compile Include="Assets\Scrpits\Knockback.cs" />
-    <Compile Include="Assets\Scrpits\CameraMovement.cs" />
-    <Compile Include="Assets\Scrpits\SceneTransition.cs" />
+    <Compile Include="Assets\Scrpits\Objects\Sign.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\Knockback.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\CameraMovement.cs" />
+    <Compile Include="Assets\Scrpits\Objects\SceneTransition.cs" />
     <Compile Include="Assets\Scrpits\SignalListener.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\ContextClue.cs" />
-    <Compile Include="Assets\Scrpits\Pot.cs" />
+    <Compile Include="Assets\Scrpits\Objects\Pot.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\FloatValue.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\HeartManager.cs" />
     <Compile Include="Assets\Scrpits\Enemy.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\VectorValue.cs" />
-    <Compile Include="Assets\Scrpits\RoomMove.cs" />
+    <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
+    <Compile Include="Assets\Scrpits\Interactable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
