--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,7 +56,7 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scrpits\Log.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\Log.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\Inventory.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\Item.cs" />
     <Compile Include="Assets\Scrpits\Objects\TreasureChest.cs" />
@@ -73,9 +73,10 @@
     <Compile Include="Assets\Scrpits\Objects\Pot.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\FloatValue.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\HeartManager.cs" />
-    <Compile Include="Assets\Scrpits\Enemy.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\Enemy.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\VectorValue.cs" />
     <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\PatrolLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
