B43: Tạo ra vùng hoạt động cho enemy

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,8 +81,9 @@
     <Compile Include="Assets\Scrpits\EnemyScripts\Enemy.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\VectorValue.cs" />
     <Compile Include="Assets\Scrpits\Objects\Coin.cs" />
-    <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\BoolValue.cs" />
+    <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\AreaEnemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
