--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,23 +71,26 @@
     <Compile Include="Assets\Scrpits\Objects\Sign.cs" />
     <Compile Include="Assets\Scrpits\Game Stuff\Knockback.cs" />
     <Compile Include="Assets\Scrpits\Game Stuff\CameraMovement.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\RockProjectile.cs" />
     <Compile Include="Assets\Scrpits\Objects\Switch.cs" />
     <Compile Include="Assets\Scrpits\Objects\SceneTransition.cs" />
     <Compile Include="Assets\Scrpits\SignalListener.cs" />
     <Compile Include="Assets\Scrpits\Objects\Heart.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\ContextClue.cs" />
+    <Compile Include="Assets\Scrpits\Objects\Projectile.cs" />
     <Compile Include="Assets\Scrpits\Objects\Pot.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\FloatValue.cs" />
     <Compile Include="Assets\Scrpits\Player Scripts\HeartManager.cs" />
     <Compile Include="Assets\Scrpits\EnemyScripts\Enemy.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\VectorValue.cs" />
+    <Compile Include="Assets\Scrpits\EnemyScripts\TurretEnemy.cs" />
     <Compile Include="Assets\Scrpits\Objects\Coin.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\BoolValue.cs" />
     <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
-    <Compile Include="Assets\Scrpits\EnemyScripts\RockProjectile.cs" />
-    <Compile Include="Assets\Scrpits\Objects\Projectile.cs" />
-    <Compile Include="Assets\Scrpits\EnemyScripts\TurretEnemy.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\Room.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\OverWorldRoom.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\DungeonRoom.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
