--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scrpits\Game Stuff\DungeonRoom.cs" />
     <Compile Include="Assets\Scrpits\EnemyScripts\Log.cs" />
     <Compile Include="Assets\Scrpits\Game Stuff\CoinTextManager.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\Inventory.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Assets\Scrpits\Player Scripts\PlayerHit.cs" />
     <Compile Include="Assets\Scrpits\Objects\Sign.cs" />
     <Compile Include="Assets\Scrpits\Game Stuff\Knockback.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\OverWorldRoom.cs" />
     <Compile Include="Assets\Scrpits\Game Stuff\CameraMovement.cs" />
     <Compile Include="Assets\Scrpits\EnemyScripts\RockProjectile.cs" />
     <Compile Include="Assets\Scrpits\Objects\Switch.cs" />
@@ -84,13 +86,13 @@
     <Compile Include="Assets\Scrpits\Player Scripts\HeartManager.cs" />
     <Compile Include="Assets\Scrpits\EnemyScripts\Enemy.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\VectorValue.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\Room.cs" />
     <Compile Include="Assets\Scrpits\EnemyScripts\TurretEnemy.cs" />
     <Compile Include="Assets\Scrpits\Objects\Coin.cs" />
+    <Compile Include="Assets\Scrpits\Game Stuff\DungeonEnemyRoom.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\BoolValue.cs" />
     <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
-    <Compile Include="Assets\Scrpits\Game Stuff\Room.cs" />
-    <Compile Include="Assets\Scrpits\Game Stuff\OverWorldRoom.cs" />
-    <Compile Include="Assets\Scrpits\Game Stuff\DungeonRoom.cs" />
+    <Compile Include="Assets\Scrpits\ScriptableObjects\LootTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
