--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\Scrpits\Game Stuff\DungeonEnemyRoom.cs" />
     <Compile Include="Assets\Scrpits\ScriptableObjects\BoolValue.cs" />
     <Compile Include="Assets\Scrpits\Objects\RoomMove.cs" />
+    <Compile Include="Assets\Scrpits\Objects\HeartContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
